src/test/deca/context/valid/decaObjet/extends/00arbreHeritage.deca
// Description:
//    Programme déclarant des classes avec héritage
//
// Resultats:
//    00arbreHeritage.lis
//
// Historique:
//    cree le 15/06/2022

class A {}

class B extends A {}

class C extends B {}